Change global find logic to be substring matching for entire input